# research-agent-radar

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main_demo.py
src/dashboard/: app.py  config.py  database.py
src/research_agent/acquisition/: downloader.py
src/research_agent/agents/analysis/: extracter.py  parser.py  reviewer.py
src/research_agent/agents/filter/: triage_agent.py
src/research_agent/agents/prompt/: prompt_agent.py
src/research_agent/agents/scourt/: arxiv_scout.py
src/research_agent/agents/scout/: arxiv_scout.py  elsevier_scout.py
src/research_agent/storage/: models.py
